Refactor Istanbul page by adding class attributes for improved styling and encapsulate historical landmarks within a new div. Enhance CSS file with detailed comments on inheritance, box model, and element types for better understanding.

--- a/Sprint3/style.css
+++ b/Sprint3/style.css
@@ -13,9 +13,36 @@ li{
 /* id selector ile stil tanımlaması */
 #marmara-link{
     text-decoration: none; /* Metni altını çizmez. */
+    font-weight: bold;
 }
 
 /* class selector ile stil tanımlaması */
 .title{
     color:purple;
+}
+
+.intro{
+    font-size: 20px;
+    line-height: 1.5; /* satır yüksekliği */
+    font-weight: bold; /* yazı kalınlığı, normal, bold, italic, underline, line-through */
+    text-align: justify; /* metin hizalama : left, right, center, justify */
+    color: blue;
+}
+
+li:first-child{
+    color: orange;
+}
+
+
+li{
+    border-bottom: 1px solid black;
+}
+
+li:last-child{
+    border-bottom: 0;
+}
+
+.dark{
+    background-color: black;
+    color: white;
 }
